<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">고객등록</string>

    <!-- 폼 구성요소에 사용되는 라벨  -->
    <string name="name">성명</string>
    <string name="sex">성별</string>
    <string name="receive">수신여부</string>

    <!-- 스피너 관련 속성: 시작 -->
    <!-- 스피너 라벨 -->
    <string name="interest">관심분야</string>
    <!-- 스피너 아이템  -->
    <string-array name="interest_array">        
        <item>경영/경제</item>        
        <item>과학</item>        
        <item>스포츠</item>        
        <item>여행</item>        
        <item>예술</item>        
        <item>외국어</item>        
        <item>요리</item>    
        <item>컴퓨터</item>        
    </string-array>
    <!-- 스피너 관련 속성: 끝 -->

    <!-- 생일  -->
    <string name="birthday">생일</string>  
            
    <!-- 고객정보 액티비티 구성 리소스  -->
    <string name="act_name_receive">고객정보</string>
    <string name="title_receive">입력하신 정보는 다음과 같습니다.</string>
    
</resources>